# Operating-Platform

./: .dockerignore  .gitignore  =1.0.0  README.md  dora_platform.py  operating_platform.yml  operating_platform_server.py  operating_platform_visual.html  pyproject.toml
docker/: Dockerfile.base  Dockerfile.ubuntu20  Dockerfile_bac.base  Dockerfile_bac2.base  create_network.sh  start.sh  start_cpu.sh  start_gpu.sh
operating_platform/: __init__.py
operating_platform/_lerobot_lite/: README.md  pyproject.toml
operating_platform/_lerobot_lite/lerobot_lite/: __init__.py  __version__.py
operating_platform/_lerobot_lite/lerobot_lite/configs/: parser.py  policies.py
operating_platform/_lerobot_lite/lerobot_lite/datasets/: compute_stats.py  online_buffer.py
operating_platform/_lerobot_lite/lerobot_lite/envs/: configs.py  factory.py  utils.py
operating_platform/_lerobot_lite/lerobot_lite/optim/: factory.py  optimizers.py  schedulers.py
operating_platform/_lerobot_lite/lerobot_lite/policies/: pretrained.py
operating_platform/_lerobot_lite/lerobot_lite/robots/: adora_dual_manipulator.py  adora_manipulator.py  aloha_manipulator.py  utils.py
operating_platform/_lerobot_lite/lerobot_lite/scripts/: push_dataset_to_hub.py  test.py  visualize_dataset_html.py
operating_platform/_lerobot_lite/lerobot_lite/utils/: camera.py  dataset.py  video.py
operating_platform/client/: multi_operating_platform_visual.html  rerun_view.html
operating_platform/coordinator/: client.py  test.py
operating_platform/core/: _client.py  _dora_platform.py  _test.py  calibrate.py  coordinator.py  coordinator_async.py  daemon.py  main.py  record.py  replay.py
operating_platform/dataset/: audio_writer.py  compute_stats.py  dorobot_dataset.py  functions.py
operating_platform/dataset/visual/: visual_dataset.py  visualize_dataset_html.py
operating_platform/lerobot_lite/: README.md  pyproject.toml
operating_platform/lerobot_lite/lerobot_lite/datasets/: factory.py  lerobot_dataset.py
operating_platform/lerobot_lite/lerobot_lite/datasets/push_dataset_to_hub/: xarm_pkl_format.py
operating_platform/lerobot_lite/lerobot_lite/datasets/v21/: _remove_language_instruction.py  convert_dataset_v20_to_v21.py
operating_platform/lerobot_lite/lerobot_lite/robots/: aloha_manipulator.py  configs.py
operating_platform/lerobot_lite/lerobot_lite/utils/: dataset.py  motors.py  video.py
operating_platform/robot/: .gitignore  test_aloha_lerobot.yml
operating_platform/robot/Log/: OrbbecSDK.log.txt
operating_platform/robot/components/arm_normal_dynamixel/: README.md  configs.py  dynamixel.py  dynamixel_bc_dora_hub.py  main.py  utils.py
operating_platform/robot/components/arm_normal_piper_v2/: main.py  test_arm.yml
operating_platform/robot/components/arm_normal_realman_v2/: README.md  main.py
operating_platform/robot/components/camera_opencv/: plot.py  pyproject.toml  test_camera_opencv.yml
operating_platform/robot/components/camera_rgbd_orbbec_v1/: main.py
operating_platform/robot/components/camera_rgbd_realsense/: main.py  plot.py  pyproject.toml
operating_platform/robot/components/camera_rgbd_zed/: main.py
operating_platform/robot/components/dora-rerun/: Cargo.toml  pyproject.toml
operating_platform/robot/components/dora-rerun/src/: lib.rs
operating_platform/robot/components/gripper_pika/: dora_gripper_pika_dual.yml  main.py  node_link.py  pyproject.toml  test_gripper_pika.yml
operating_platform/robot/components/teleop_data_collector/: main.py  teleop.py
operating_platform/robot/components/tracker_6d_vive/: dora_get_vive_sn.yml  dora_test_vive_multi.yml  dora_test_vive_single.yml  dora_test_vive_single_multi.yml  dora_vive_dual.yml  dora_vive_multi.yml  dora_vive_single.yml  dora_vive_single_uv.yml  dora_vive_sn.py  dora_vive_sn.yml  dora_vive_tracker.py  dora_vive_visual.py  pa_schema.py  pyproject.toml
operating_platform/robot/components/tracker_6d_vive/dr_tracker_vive/: node_link.py  pa_schema.py  print.py  tracker.py  visual.py
operating_platform/robot/robots/: aloha_manipulator.py  camera.py  configs.py  dora_zeromq.py  utils.py
operating_platform/robot/robots/aloha_v1/: action_splitter.py  pyproject.toml  robot_aloha_dataflow.yml  test_aloha_lerobot.yml
operating_platform/robot/robots/com_configs/: motors.py
operating_platform/robot/robots/dexterous_hand_v1/: dora_zeromq_image.py  dora_zeromq_plot.py  dora_zeromq_pose.py  dora_zeromq_test.py  manipulator.py  manipulator1.py  manipulator_test.py  plot.py  robot_dataflow.yml  robot_dataflow1.yml
operating_platform/robot/robots/pika_v1/: dora_pika_trans_visual.py  dora_pika_trans_visual_dual.py  dora_pika_trans_visual_dual_have_bug.py  dora_zeromq.py  manipulator.py  multi_device_detector.py  opencv_dataflow_rerun.yml  pika_trans_visual_dual.py  pose_utils.py  pyproject.toml  robot_dataflow.yml  test_pika_6d_dual.yml  test_pika_6d_single.yml
operating_platform/robot/robots/pika_v1/docker/: Dockerfile.pika_v1  build.sh  run_cpu.sh  start.sh
operating_platform/robot/robots/so101_v1/: README.md  calibrate.py  print_joint.py  pyproject.toml  robot_aloha_dataflow.yml  test_camera.yml
operating_platform/server/: dockerfile  environment.yml  heart_demo.py  machine_id.txt  nas_sdk.py  operating_platform_server_test.py  operating_platform_server_test_old.py  requirements.txt  start_server_docker.sh  upload_to_nas.py  utils.py
operating_platform/utils/: constants.py  data_file.py  dataset.py  parser.py  utils.py  video.py
scripts/: cmd  record.sh  run.sh  run_so101_cli.sh  visual.sh
test/audio/: realtime.py  test.py  visual.py
test/demo1/: dora_platform.py  multi_operating_platform_visual.html  operating_platform_server.py  operating_platform_server_new.py  operating_platform_visual_old.html  test_record.yml
test/docker_link/: test.py
test/parquet/: test.py
test/piper/: README.md  arm_ctrl.py  arms_only.yml  arms_only_web.yml  docker_can_muti_activate.sh  find_all_can_port.sh  pyproject.toml
test/test/: test_gripper_np.py  test_opencv.py  test_trans_matrix.py
test/thread/: dora_thread.py  test_thread.yml
(+17 files in other folders)
