[tool.poetry]
name = "operating-platform"
version = "0.1.0"
description = ""
authors = ["Xiang Yang <ryu-yang@qq.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"  # Explicit Python constraint
flask = "==3.0.3"
gevent = ">=25.5.1,<26.0.0"
flask-cors = { version = ">=6.0.1,<7.0.0", python = "<4.0" }
pyzmq = ">=27.0.0,<28.0.0"
pynput = ">=1.8.1,<2.0.0"
lerobot-lite = { path = "operating_platform/lerobot_lite", develop = true }
opencv-python = "^4.11.0.86"
python-socketio = "^5.13.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"