[tool.poetry]
name = "operating-platform"
version = "0.1.0"
description = ""
authors = ["Xiang Yang <ryu-yang@qq.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"  # Explicit Python constraint
flask = "==3.0.3"
gevent = ">=25.5.1,<26.0.0"
flask-cors = { version = ">=6.0.1,<7.0.0", python = "<4.0" }
pyzmq = ">=27.0.0,<28.0.0"
pynput = ">=1.8.1,<2.0.0"
opencv-python = "^4.11.0.86"
python-socketio = "^5.13.0"
websocket-client = "^1.8.0"
schedule = "^1.2.2"
pillow = ">=11.2.1,<12.0.0"
datasets = ">=3.6.0,<4.0.0"
jsonlines = ">=4.0.0,<5.0.0"
huggingface-hub = ">=0.33.0,<0.34.0"
gymnasium = ">=1.1.1,<2.0.0"
einops = ">=0.8.1,<0.9.0"
safetensors = ">=0.5.3,<0.6.0"
imageio = { version = ">=2.37.0,<3.0.0", extras = ["ffmpeg"] }
diffusers = ">=0.33.1,<0.34.0"
pymunk = ">=7.0.1,<8.0.0"
gym-pusht = ">=0.1.5,<0.2.0"
imagecodecs = ">=2025.3.30,<2026.0.0"
tensorflow = ">=2.19.0,<3.0.0"
tensorflow-datasets = ">=4.9.9,<5.0.0"
draccus = ">=0.11.5,<0.12.0"
flask = "==3.0.3"
deepdiff = ">=8.5.0,<9.0.0"
zarr = ">=3.0.8,<4.0.0"
numba = ">=0.61.2,<0.62.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"