[project]
name = "lerobot-lite"
version = "0.1.0"
description = ""
authors = [
    {name = "Xiang Yang",email = "ryu-yang@qq.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pillow (>=11.2.1,<12.0.0)",
    "datasets (>=3.6.0,<4.0.0)",
    "jsonlines (>=4.0.0,<5.0.0)",
    "huggingface-hub (>=0.33.0,<0.34.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "gymnasium (>=1.1.1,<2.0.0)",
    "einops (>=0.8.1,<0.9.0)",
    "safetensors (>=0.5.3,<0.6.0)",
    "imageio[ffmpeg] (>=2.37.0,<3.0.0)",
    "diffusers (>=0.33.1,<0.34.0)",
    "pymunk (>=7.0.1,<8.0.0)",
    "gym-pusht (>=0.1.5,<0.2.0)",
    "imagecodecs (>=2025.3.30,<2026.0.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
    "tensorflow-datasets (>=4.9.9,<5.0.0)",
    "draccus (>=0.11.5,<0.12.0)",
    "flask ==3.0.3",
    "deepdiff (>=8.5.0,<9.0.0)",
    "zarr (>=3.0.8,<4.0.0)",
    "numba (>=0.61.2,<0.62.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
