[project]
name = "dr-camera-opencv"
version = "0.1.0"
description = ""
authors = [
    {name = "Xiang Yang",email = "ryu-yang@qq.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "dora-rs-cli (>=0.3.11,<0.4.0)",
    "opencv-python >= 4.1.1"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"