[project]
name = "dr-robot-pika-v1"
version = "0.1.0"
description = ""
authors = [
    { name = "Xiang Yang", email = "ryu-yang@qq.com" }
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "dora-rs-cli>=0.3.11,<0.4.0",
    "dora-rerun>=0.3.11,<0.4.0",
    "opencv-python>=4.10.0",
    "pyzmq",
]

[tool.setuptools]
packages = []

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"